| Bug #671 | mysqlbinlog's --table option gives strange (wrong?) output | ||
|---|---|---|---|
| Submitted: | 18 Jun 2003 6:32 | Modified: | 1 Jul 2003 3:28 |
| Reporter: | Guilhem Bichot | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Replication | Severity: | S3 (Non-critical) |
| Version: | 4.0 | OS: | Any (all) |
| Assigned to: | Victor Vagin | CPU Architecture: | Any |
[18 Jun 2003 6:32]
Guilhem Bichot
[30 Jun 2003 2:13]
Victor Vagin
mysqlbinlog --port=$port --table=test.v can be replaced with: mysqldump --port=$port test v
[1 Jul 2003 3:28]
Victor Vagin
Thank you for your bug report. This issue has been fixed in the latest
development tree for that product. You can find more information about
accessing our development trees at
http://www.mysql.com/doc/en/Installing_source_tree.html
option mysqlbinlog --table is removed
