removed --table option (fixed Bug #671)